@@ -81,21 +81,6 @@
 #define QORE_DTYPE_TIMESTAMP  OCI_DTYPE_TIMESTAMP
 #endif
 
-#ifdef _QORE_HAS_DBI_EXECRAW
-#define ORA_DBI_CAP_HAS_EXECRAW DBI_CAP_HAS_EXECRAW
-#else
-#define ORA_DBI_CAP_HAS_EXECRAW 0
-#endif
-
-#ifdef _QORE_HAS_TIME_ZONES
-#define ORA_DBI_CAP_TIME_ZONE_SUPPORT DBI_CAP_TIME_ZONE_SUPPORT
-#else
-#define ORA_DBI_CAP_TIME_ZONE_SUPPORT 0
-#endif
-
-// capabilities of this driver
-#define DBI_ORACLE_CAPS (DBI_CAP_TRANSACTION_MANAGEMENT | DBI_CAP_STORED_PROCEDURES | DBI_CAP_CHARSET_SUPPORT | DBI_CAP_LOB_SUPPORT | DBI_CAP_BIND_BY_VALUE | DBI_CAP_BIND_BY_PLACEHOLDER | ORA_DBI_CAP_HAS_EXECRAW | ORA_DBI_CAP_TIME_ZONE_SUPPORT)
-
 // maximum string size for an oracle number
 #define ORACLE_NUMBER_STR_LEN 50
 
